--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -1,22 +1,25 @@
 name: Scala CI
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        java: [17, 21]
+    env:
+      JAVA_OPTS: -Xm2048M
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    - name: Set up JDK
       uses: actions/setup-java@v4
       with:
-        java-version: 17
-        distribution: temurin
+        distribution: "temurin"
+        java-version: ${{ matrix.java }}
+    - name: Setup SBT
+      uses: sbt/setup-sbt@v1
     - name: Run tests
       run: sbt scripted
