add scalafmtCheck task in CI

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Setup SBT
       uses: sbt/setup-sbt@v1
     - name: Run tests
-      run: sbt scripted
+      run: sbt scalafmtSbtCheck "+ scalafmtCheckAll" scripted
