--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,5 @@
 version = 3.10.5
 runner.dialect=scala212source3
+rewrite.scala3.convertToNewSyntax = true
+rewrite.scala3.newSyntax.control = false
+project.layout = StandardConvention
